--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -23,57 +23,57 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <input type="hidden" asp-for="Company.ID" />
                                 <div class="form-group">
-                                    <label asp-for="Company.Title" class="control-label"></label>
+                                    <label asp-for="Company.Title" class="control-label">Название:</label>
                                     <input asp-for="Company.Title" class="form-control" />
                                     <span asp-validation-for="Company.Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Rating" class="control-label"></label>
+                                    <label asp-for="Company.Rating" class="control-label">Рейтинг:</label>
                                     <input asp-for="Company.Rating" class="form-control" />
                                     <span asp-validation-for="Company.Rating" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.EnrollmentDate" class="control-label"></label>
+                                    <label asp-for="Company.EnrollmentDate" class="control-label">Дата Регистрации:</label>
                                     <input asp-for="Company.EnrollmentDate" class="form-control" />
                                     <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Bonus" class="control-label"></label>
+                                    <label asp-for="Company.Bonus" class="control-label">Бонус:</label>
                                     <input asp-for="Company.Bonus" class="form-control" />
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Description" class="control-label"></label>
+                                    <label asp-for="Company.Description" class="control-label">Описание:</label>
                                     <textarea asp-for="Company.Description" class="form-control"></textarea>
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Images" class="control-label"></label>
+                                    <label asp-for="Company.Images" class="control-label">Изобраение:</label>
                                     <input asp-for="Company.Images" class="form-control" />
                                     <span asp-validation-for="Company.Images" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Video" class="control-label"></label>
+                                    <label asp-for="Company.Video" class="control-label">Видео:</label>
                                     <input asp-for="Company.Video" class="form-control" />
                                     <span asp-validation-for="Company.Video" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Topic" class="control-label"></label>
+                                    <label asp-for="Company.Topic" class="control-label">Тема:</label>
                                     <input asp-for="Company.Topic" class="form-control" />
                                     <span asp-validation-for="Company.Topic" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.News" class="control-label"></label>
+                                    <label asp-for="Company.News" class="control-label">Новости:</label>
                                     <textarea asp-for="Company.News" class="form-control"></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Price" class="control-label"></label>
+                                    <label asp-for="Company.Price" class="control-label">Цена:</label>
                                     <input asp-for="Company.Price" class="form-control" />
                                     <span asp-validation-for="Company.Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Tags" class="control-label"></label>
+                                    <label asp-for="Company.Tags" class="control-label">Тэги:</label>
                                     <input asp-for="Company.Tags" class="form-control" />
                                     <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                 </div>
