--- a/Pages/Departments/Create.cshtml
+++ b/Pages/Departments/Create.cshtml
@@ -21,27 +21,27 @@
                         <form method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
-                                <label asp-for="Department.Name" class="control-label"></label>
+                                <label asp-for="Department.Name" class="control-label">@Localizer["Имя:"]</label>
                                 <input asp-for="Department.Name" class="form-control" />
                                 <span asp-validation-for="Department.Name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Budget" class="control-label"></label>
+                                <label asp-for="Department.Budget" class="control-label">@Localizer["Бюджет:"]</label>
                                 <input asp-for="Department.Budget" class="form-control" />
                                 <span asp-validation-for="Department.Budget" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.StartDate" class="control-label"></label>
+                                <label asp-for="Department.StartDate" class="control-label">@Localizer["Дата Начала:"]</label>
                                 <input asp-for="Department.StartDate" class="form-control" />
                                 <span asp-validation-for="Department.StartDate" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.RowVersion" class="control-label"></label>
+                                <label asp-for="Department.RowVersion" class="control-label">@Localizer["Версия строки:"]</label>
                                 <input asp-for="Department.RowVersion" class="form-control" />
                                 <span asp-validation-for="Department.RowVersion" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Administrator" class="control-label"></label>
+                                <label asp-for="Department.Administrator" class="control-label">@Localizer["Администратор:"]</label>
                                 <input asp-for="Department.Administrator" class="form-control" />
                                 <span asp-validation-for="Department.Administrator" class="text-danger"></span>
                             </div>
