--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -18,74 +18,76 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Instructors.ID" />
             <div class="form-group">
-                <label asp-for="Instructors.LastName" class="control-label"></label>
+                <label asp-for="Instructors.LastName" class="control-label">@Localizer["Фамилия:"]</label>
                 <input asp-for="Instructors.LastName" class="form-control" />
                 <span asp-validation-for="Instructors.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.FirstMidName" class="control-label"></label>
+                <label asp-for="Instructors.FirstMidName" class="control-label">@Localizer["Имя:"]</label>
                 <input asp-for="Instructors.FirstMidName" class="form-control" />
                 <span asp-validation-for="Instructors.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.HireDate" class="control-label"></label>
+                <label asp-for="Instructors.HireDate" class="control-label">@Localizer["Дата Найма:"]</label>
                 <input asp-for="Instructors.HireDate" class="form-control" />
                 <span asp-validation-for="Instructors.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Age" class="control-label"></label>
+                <label asp-for="Instructors.Age" class="control-label">@Localizer["Возраст:"]</label>
                 <input asp-for="Instructors.Age" class="form-control" />
                 <span asp-validation-for="Instructors.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Country" class="control-label"></label>
+                <label asp-for="Instructors.Country" class="control-label">@Localizer["Страна:"]</label>
                 <input asp-for="Instructors.Country" class="form-control" />
                 <span asp-validation-for="Instructors.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.City" class="control-label"></label>
+                <label asp-for="Instructors.City" class="control-label">@Localizer["Город:"]</label>
                 <input asp-for="Instructors.City" class="form-control" />
                 <span asp-validation-for="Instructors.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Email" class="control-label"></label>
+                <label asp-for="Instructors.Email" class="control-label">@Localizer["Почта:"]</label>
                 <input asp-for="Instructors.Email" class="form-control" />
                 <span asp-validation-for="Instructors.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.AboutMe" class="control-label"></label>
+                <label asp-for="Instructors.AboutMe" class="control-label">@Localizer["О себе:"]</label>
                 <input asp-for="Instructors.AboutMe" class="form-control" />
                 <span asp-validation-for="Instructors.AboutMe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.OfficeAssignment.Location" class="control-label"></label>
+                <label asp-for="Instructors.OfficeAssignment.Location" class="control-label">@Localizer["Местоположение"]</label>
                 <input asp-for="Instructors.OfficeAssignment.Location" class="form-control" />
                 <span asp-validation-for="Instructors.OfficeAssignment.Location" class="text-danger" />
             </div>
             <div class="form-group">
                 <div class="table">
-                    <table>
-                        <tr>
-                            @{
-                                int cnt = 0;
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <tr>
+                                @{
+                                    int cnt = 0;
 
-                                foreach (var ads in Model.AssignedAdsDataList)
-                                {
-                                    if (cnt++ % 3 == 0)
+                                    foreach (var ads in Model.AssignedAdsDataList)
                                     {
-                                    @:</tr><tr>
+                                        if (cnt++ % 3 == 0)
+                                        {
+                                        @:</tr><tr>
+                                        }
+                                        @:<td>
+                                            <input type="checkbox"
+                                                   name="selectedCourses"
+                                                   value="@ads.AdsID"
+                                                   @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
+                                            @ads.AdsID @:  @ads.Title
+                                        @:</td>
                                     }
-                                    @:<td>
-                                        <input type="checkbox"
-                                               name="selectedCourses"
-                                               value="@ads.AdsID"
-                                               @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
-                                        @ads.AdsID @:  @ads.Title
-                                    @:</td>
+                                @:</tr>
                                 }
-                            @:</tr>
-                            }
-                        </table>
+                            </table>
+                    </div>
                     </div>
                 </div>
                 <div class="form-group">
