--- a/Pages/Ads/Create.cshtml
+++ b/Pages/Ads/Create.cshtml
@@ -21,25 +21,25 @@
                         <form method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
-                                <label asp-for="Ads.AdsID" class="control-label"></label>
+                                <label asp-for="Ads.AdsID" class="control-label">@Localizer["Номер:"]</label>
                                 <input asp-for="Ads.AdsID" class="form-control" />
                                 <span asp-validation-for="Ads.AdsID" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Title" class="control-label"></label>
+                                <label asp-for="Ads.Title" class="control-label">@Localizer["Название:"]</label>
                                 <input asp-for="Ads.Title" class="form-control" />
                                 <span asp-validation-for="Ads.Title" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Tags" class="control-label"></label>
+                                <label asp-for="Ads.Tags" class="control-label">@Localizer["Тэги:"]</label>
                                 <input asp-for="Ads.Tags" class="form-control" />
                                 <span asp-validation-for="Ads.Tags" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Department" class="control-label"></label>
+                                <label asp-for="Ads.Department" class="control-label">@Localizer["Описание:"]</label>
                                 <select asp-for="Ads.DepartmentID" class="form-control"
                                         asp-items="@Model.DepartmentNameSL">
-                                    <option value="">-- Select Department --</option>
+                                    <option value="">Выберите Отдел</option>
                                 </select>
                                 <span asp-validation-for="Ads.DepartmentID" class="text-danger" />
                             </div>
