--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -24,32 +24,32 @@
                             <form method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Title" class="control-label"></label>
+                                    <label asp-for="Company.Title" class="control-label">@Localizer["Название:"]</label>
                                     <input asp-for="Company.Title" class="form-control" />
                                     <span asp-validation-for="Company.Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Rating" class="control-label"></label>
+                                    <label asp-for="Company.Rating" class="control-label">@Localizer["Рейтинг:"]</label>
                                     <input asp-for="Company.Rating" class="form-control" />
                                     <span asp-validation-for="Company.Rating" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.EnrollmentDate" class="control-label"></label>
+                                    <label asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Дата Регистрации:"]</label>
                                     <input asp-for="Company.EnrollmentDate" class="form-control" />
                                     <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Bonus" class="control-label"></label>
+                                    <label asp-for="Company.Bonus" class="control-label">@Localizer["Бонус:"]</label>
                                     <input asp-for="Company.Bonus" class="form-control" />
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Description" class="control-label"></label>
+                                    <label asp-for="Company.Description" class="control-label">@Localizer["Описание:"]</label>
                                     <textarea asp-for="Company.Description" class="form-control"></textarea>
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Images" class="control-label"></label>
+                                    <label asp-for="Company.Images" class="control-label">@Localizer["Изобраения:"]</label>
                                     <input asp-for="Company.Images" class="form-control" />
                                     <span asp-validation-for="Company.Images" class="text-danger"></span>
                                     @*<div id="drop-area">
@@ -63,27 +63,27 @@
                                     </div>*@
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Video" class="control-label"></label>
+                                    <label asp-for="Company.Video" class="control-label">@Localizer["Видео:"]</label>
                                     <input asp-for="Company.Video" class="form-control" />
                                     <span asp-validation-for="Company.Video" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Topic" class="control-label"></label>
+                                    <label asp-for="Company.Topic" class="control-label">@Localizer["Тема:"]</label>
                                     <input asp-for="Company.Topic" class="form-control" />
                                     <span asp-validation-for="Company.Topic" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.News" class="control-label"></label>
+                                    <label asp-for="Company.News" class="control-label">@Localizer["Новости:"]</label>
                                     <textarea asp-for="Company.News" class="form-control" ></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Price" class="control-label"></label>
+                                    <label asp-for="Company.Price" class="control-label">@Localizer["Цена:"]</label>
                                     <input asp-for="Company.Price" class="form-control" />
                                     <span asp-validation-for="Company.Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Tags" class="control-label"></label>
+                                    <label asp-for="Company.Tags" class="control-label">@Localizer["Рейтинг:"]</label>
                                     <input asp-for="Company.Tags" class="form-control" />
                                     <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                 </div>
