--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -19,7 +19,7 @@
 
                     <h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
                     <div>
-                        <h4>Company</h4>
+                        <h4>@Localizer["Компания"]</h4>
                         <hr />
                         <dl class="row">
                             <dt class="col-sm-2">
