--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -103,23 +103,25 @@
                                 @Html.DisplayNameFor(model => model.Company.Enrollments)
                             </dt>
                             <dd class="col-sm-10">
-                                <table class="table">
-                                    <tr>
-                                        <th>@Localizer["Заголовок Объявления"]</th>
-                                        <th>@Localizer["Категория"]</th>
-                                    </tr>
-                                    @foreach (var item in Model.Company.Enrollments)
-                                    {
+                                <div class="table-responsive">
+                                    <table class="table table-hover">
                                         <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Ads.Title)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Grade)
-                                            </td>
+                                            <th>@Localizer["Заголовок Объявления"]</th>
+                                            <th>@Localizer["Категория"]</th>
                                         </tr>
-                                    }
-                                </table>
+                                        @foreach (var item in Model.Company.Enrollments)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Ads.Title)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Grade)
+                                                </td>
+                                            </tr>
+                                        }
+                                    </table>
+                                </div>
                             </dd>
                         </dl>
                     </div>
