--- a/Pages/Departments/Edit.cshtml
+++ b/Pages/Departments/Edit.cshtml
@@ -27,23 +27,23 @@
                                 @Model.Department.RowVersion[7]
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Name" class="control-label"></label>
+                                <label asp-for="Department.Name" class="control-label">@Localizer["Имя:"]</label>
                                 <input asp-for="Department.Name" class="form-control" />
                                 <span asp-validation-for="Department.Name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Budget" class="control-label"></label>
+                                <label asp-for="Department.Budget" class="control-label">@Localizer["Бюджет:"]</label>
                                 <input asp-for="Department.Budget" class="form-control" />
                                 <span asp-validation-for="Department.Budget" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.StartDate" class="control-label"></label>
+                                <label asp-for="Department.StartDate" class="control-label">@Localizer["Дата Начала:"]</label>
                                 <input asp-for="Department.StartDate" class="form-control" />
                                 <span asp-validation-for="Department.StartDate" class="text-danger">
                                 </span>
                             </div>
                             <div class="form-group">
-                                <label class="control-label">Instructor</label>
+                                <label class="control-label">@Localizer["Администратор:"]</label>
                                 <select asp-for="Department.UsersID" class="form-control"
                                         asp-items="@Model.InstructorNameSL"></select>
                                 <span asp-validation-for="Department.UsersID" class="text-danger">
