--- a/Pages/Departments/Index.cshtml
+++ b/Pages/Departments/Index.cshtml
@@ -17,55 +17,58 @@
                 <p>
                     <a asp-page="Create">@Localizer["Создать"]</a>
                 </p>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Department[0].Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Department[0].Budget)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Department[0].StartDate)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Department[0].Administrator)
-                            </th>
-                            <th>
-                                RowVersion
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Department)
-                        {
+
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Budget)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.StartDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Administrator.FullName)
-                                </td>
-                                <td>
-                                    @item.RowVersion[7]
-                                </td>
-                                <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Редактировать"]</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Подробности"]</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Удалить"]</a>
-                                </td>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Department[0].Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Department[0].Budget)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Department[0].StartDate)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Department[0].Administrator)
+                                </th>
+                                <th>
+                                    RowVersion
+                                </th>
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Department)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Budget)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.StartDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Administrator.FullName)
+                                    </td>
+                                    <td>
+                                        @item.RowVersion[7]
+                                    </td>
+                                    <td>
+                                        <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Редактировать"]</a> |
+                                        <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Подробности"]</a> |
+                                        <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Удалить"]</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
