--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -5,6 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 <h2>Create</h2>
 
 <h4>Instructor</h4>
@@ -14,49 +17,76 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Instructor.LastName" class="control-label"></label>
+                <label asp-for="Instructor.LastName" class="control-label">@Localizer["Фамилия:"]</label>
                 <input asp-for="Instructor.LastName" class="form-control" />
                 <span asp-validation-for="Instructor.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructor.FirstMidName" class="control-label"></label>
+                <label asp-for="Instructor.FirstMidName" class="control-label">@Localizer["Имя:"]</label>
                 <input asp-for="Instructor.FirstMidName" class="form-control" />
                 <span asp-validation-for="Instructor.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructor.HireDate" class="control-label"></label>
+                <label asp-for="Instructor.HireDate" class="control-label">@Localizer["Дата Найма:"]</label>
                 <input asp-for="Instructor.HireDate" class="form-control" />
                 <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
+                <label asp-for="Instructor.Age" class="control-label">@Localizer["Возраст:"]</label>
+                <input asp-for="Instructor.Age" class="form-control" />
+                <span asp-validation-for="Instructor.Age" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.Country" class="control-label">@Localizer["Страна:"]</label>
+                <input asp-for="Instructor.Country" class="form-control" />
+                <span asp-validation-for="Instructor.Country" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.City" class="control-label">@Localizer["Город:"]</label>
+                <input asp-for="Instructor.City" class="form-control" />
+                <span asp-validation-for="Instructor.City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.Email" class="control-label">@Localizer["Почта:"]</label>
+                <input asp-for="Instructor.Email" class="form-control" />
+                <span asp-validation-for="Instructor.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.AboutMe" class="control-label">@Localizer["О себе:"]</label>
+                <input asp-for="Instructor.AboutMe" class="form-control" />
+                <span asp-validation-for="Instructor.AboutMe" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label">@Localizer["Местоположение"]</label>
                 <input asp-for="Instructor.OfficeAssignment.Location" class="form-control" />
                 <span asp-validation-for="Instructor.OfficeAssignment.Location" class="text-danger" />
             </div>
             <div class="form-group">
                 <div class="table">
-                    <table>
-                        <tr>
-                            @{
-                                int cnt = 0;
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <tr>
+                                @{
+                                    int cnt = 0;
 
-                                foreach (var ads in Model.AssignedAdsDataList)
-                                {
-                                    if (cnt++ % 3 == 0)
+                                    foreach (var ads in Model.AssignedAdsDataList)
                                     {
-                                    @:</tr><tr>
+                                        if (cnt++ % 3 == 0)
+                                        {
+                                        @:</tr><tr>
+                                        }
+                                        @:<td>
+                                            <input type="checkbox"
+                                                   name="selectedCourses"
+                                                   value="@ads.AdsID"
+                                                   @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
+                                            @ads.AdsID @:  @ads.Title
+                                        @:</td>
                                     }
-                                    @:<td>
-                                        <input type="checkbox"
-                                               name="selectedCourses"
-                                               value="@ads.AdsID"
-                                               @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
-                                        @ads.AdsID @:  @ads.Title
-                                    @:</td>
+                                @:</tr>
                                 }
-                            @:</tr>
-                            }
-                        </table>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
