--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -13,135 +13,143 @@
 <p>
     <a asp-page="Create">@Localizer["Создать"]</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th>Hire Date</th>
-            <th>Ags</th>
-            <th>Country</th>
-            <th>City</th>
-            <th>Email</th>
-            <th>About Me</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.InstructorData.Instructors)
-        {
-            string selectedRow = "";
-            if (item.ID == Model.InstructorID)
-            {
-                selectedRow = "table-success";
-            }
-            <tr class="@selectedRow">
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstMidName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HireDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Age)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Country)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AboutMe)
-                </td>
-                <td>
-                    @if (item.OfficeAssignment != null)
-                    {
-                        @item.OfficeAssignment.Location
-                    }
-                </td>
-                <td>
-                    @{
-                        foreach (var ads in item.AdsAssignments)
-                        {
-                            @ads.Ads.AdsID @:  @ads.Ads.Title <br />
-                        }
-                    }
-                </td>
-                <td>
-                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Выбрать"]</a> |
-                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
-                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
-                </td>
+
+<div class="table-responsive">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>@Localizer["Фамилия"]</th>
+                <th>@Localizer["Имя"]</th>
+                <th>@Localizer["Дата Найма"]</th>
+                <th>@Localizer["Возраст"]</th>
+                <th>@Localizer["Страна"]</th>
+                <th>@Localizer["Город"]</th>
+                <th>@Localizer["Почта"]</th>
+                <th>@Localizer["О себе"]</th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.InstructorData.Instructors)
+            {
+                string selectedRow = "";
+                if (item.ID == Model.InstructorID)
+                {
+                    selectedRow = "table-success";
+                }
+                <tr class="@selectedRow">
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstMidName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.HireDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Age)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Country)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AboutMe)
+                    </td>
+                    <td>
+                        @if (item.OfficeAssignment != null)
+                        {
+                            @item.OfficeAssignment.Location
+                        }
+                    </td>
+                    <td>
+                        @{
+                            foreach (var ads in item.AdsAssignments)
+                            {
+                                @ads.Ads.AdsID @:  @ads.Ads.Title <br />
+                            }
+                        }
+                    </td>
+                    <td>
+                        <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Выбрать"]</a> |
+                        <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
+                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 @if (Model.InstructorData.Ads != null)
 {
-<h3>@Localizer["Компания создана выбранным пользователем"]</h3>
-    <table class="table">
-        <tr>
-            <th></th>
-            <th>Number</th>
-            <th>Title</th>
-            <th>Department</th>
-        </tr>
+    <h3>@Localizer["Компания создана выбранным пользователем"]</h3>
 
-        @foreach (var item in Model.InstructorData.Ads)
-        {
-            string selectedRow = "";
-            if (item.AdsID == Model.AdsID)
-            {
-                selectedRow = "table-success";
-            }
-            <tr class="@selectedRow">
-                <td>
-                    <a asp-page="./Index" asp-route-courseID="@item.AdsID">@Localizer["Выбрать"]</a>
-                </td>
-                <td>
-                    @item.AdsID
-                </td>
-                <td>
-                    @item.Title
-                </td>
-                <td>
-                    @item.Department.Name
-                </td>
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <tr>
+                <th></th>
+                <th>@Localizer["Номер"]</th>
+                <th>@Localizer["Название"]</th>
+                <th>@Localizer["Отдел"]</th>
             </tr>
-        }
 
-    </table>
+            @foreach (var item in Model.InstructorData.Ads)
+            {
+                string selectedRow = "";
+                if (item.AdsID == Model.AdsID)
+                {
+                    selectedRow = "table-success";
+                }
+                <tr class="@selectedRow">
+                    <td>
+                        <a asp-page="./Index" asp-route-courseID="@item.AdsID">@Localizer["Выбрать"]</a>
+                    </td>
+                    <td>
+                        @item.AdsID
+                    </td>
+                    <td>
+                        @item.Title
+                    </td>
+                    <td>
+                        @item.Department.Name
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 }
 
 @if (Model.InstructorData.Enrollments != null)
 {
-<h3>
-    @Localizer["Компания зарегистрирована в выбранных объявлениях"]
-</h3>
-    <table class="table">
-        <tr>
-            <th>Name</th>
-            <th>Grade</th>
-        </tr>
-        @foreach (var item in Model.InstructorData.Enrollments)
-        {
+    <h3>
+        @Localizer["Компания зарегистрирована в выбранных объявлениях"]
+    </h3>
+
+    <div class="table-responsive">
+        <table class="table table-hover">
             <tr>
-                <td>
-                    @item.Company.FullName
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Grade)
-                </td>
+                <th>@Localizer["Имя"]</th>
+                <th>@Localizer["Класс"]</th>
             </tr>
-        }
-    </table>
+            @foreach (var item in Model.InstructorData.Enrollments)
+            {
+                <tr>
+                    <td>
+                        @item.Company.FullName
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Grade)
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 }
