--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -83,7 +83,7 @@
                                     <span asp-validation-for="Company.Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Tags" class="control-label">@Localizer["Рейтинг:"]</label>
+                                    <label asp-for="Company.Tags" class="control-label">@Localizer["Тэги::"]</label>
                                     <input asp-for="Company.Tags" class="form-control" />
                                     <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                 </div>
