--- a/Pages/User/Delete.cshtml
+++ b/Pages/User/Delete.cshtml
@@ -68,9 +68,9 @@
         </dt>
     </dl>
 
-    <form method="post">
+    @*<form method="post">
         <input type="hidden" asp-for="Instructors.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
-    </form>
+    </form>*@
 </div>
