--- a/Pages/User/Details.cshtml
+++ b/Pages/User/Details.cshtml
@@ -10,6 +10,10 @@
 
 <h1>@Localizer["Подробности"]</h1>
 
+@*<p>
+    <a asp-page="Create">@Localizer["Создать"]</a> это создание пользователя, а нужно компании
+</p>*@
+
 <div>
     <h4>@Localizer["Пользователь"]</h4>
     <hr />
@@ -69,5 +73,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Instructors.ID">@Localizer["Редактировать"]</a> |
-    <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
+    @*<a asp-page="./Index">@Localizer["Вернуться к списку"]</a>*@
 </div>
