--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -96,9 +96,9 @@
         </div>
     </div>
 
-    <div>
+    @*<div>
         <a asp-page="Index">@Localizer["Вернуться к списку"]</a>
-    </div>
+    </div>*@
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
